package DesignPatterns.StrategyDesignPattern;

public interface FlyAbleRobot {
    void fly();
}
