package DesignPatterns.StrategyDesignPattern;

public interface TalkAbleRobot {
    void talk();
}
