package DesignPatterns.StrategyDesignPattern;

public interface WalkableRobot {
    void walk();
}
